sync: push all workspace files