@@ -5,6 +5,7 @@ import com.pixelwarp.access.WarpAccessManager;
 import com.pixelwarp.backup.WarpBackupManager;
 import com.pixelwarp.gui.WarpMenu;
 import com.pixelwarp.preview.PreviewManager;
+import com.pixelwarp.reload.ReloadManager;
 import com.pixelwarp.teleport.TeleportAnimation;
 import com.pixelwarp.util.MessageUtil;
 import com.pixelwarp.warp.Warp;
@@ -36,7 +37,6 @@ public class WarpCommand implements CommandExecutor, TabCompleter {
 
     private final WarpPlugin plugin;
     private final WarpManager warpManager;
-    private final WarpAccessManager accessManager;
     private final WarpBackupManager backupManager;
     private final TeleportAnimation teleportAnimation;
     private final PreviewManager previewManager;
@@ -44,7 +44,6 @@ public class WarpCommand implements CommandExecutor, TabCompleter {
     public WarpCommand(WarpPlugin plugin) {
         this.plugin = plugin;
         this.warpManager = plugin.getWarpManager();
-        this.accessManager = plugin.getAccessManager();
         this.backupManager = plugin.getBackupManager();
         this.teleportAnimation = plugin.getTeleportAnimation();
         this.previewManager = plugin.getPreviewManager();
@@ -53,24 +52,57 @@ public class WarpCommand implements CommandExecutor, TabCompleter {
     @Override
     public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command,
                              @NotNull String label, @NotNull String[] args) {
-        if (!(sender instanceof Player player)) {
-            sender.sendMessage(MessageUtil.error("Only players can use this command."));
+        String base = label.toLowerCase(Locale.ROOT);
+
+        if (plugin.isReloading()) {
+            sender.sendMessage(MessageUtil.info("PixelWarp is currently reloading. Please try again in a moment."));
             return true;
         }
 
         // /warps → open GUI
-        if (label.equalsIgnoreCase("warps")) {
+        if (base.equals("warps")) {
+            if (!(sender instanceof Player player)) {
+                sender.sendMessage(MessageUtil.error("Only players can use this command."));
+                return true;
+            }
             WarpMenu.open(player, warpManager, null, null, 0);
             return true;
         }
 
+        if (base.equals("pwarp")) {
+            if (args.length == 0 || !args[0].equalsIgnoreCase("reload")) {
+                sender.sendMessage(MessageUtil.info("Usage: /pwarp reload [config|storage|all]"));
+                return true;
+            }
+            return handleReload(sender, args);
+        }
+
         // /warp with no args → usage
         if (args.length == 0) {
-            sendUsage(player);
+            if (sender instanceof Player player) {
+                sendUsage(player);
+            } else {
+                sender.sendMessage(MessageUtil.info("Usage: /warp <name|preview|stats|top|edit|rename|access|export|import|debug|reload|backup>"));
+            }
             return true;
         }
 
         String sub = args[0].toLowerCase();
+
+        if (sub.equals("debug")) {
+            return handleDebug(sender);
+        }
+        if (sub.equals("reload")) {
+            return handleReload(sender, args);
+        }
+        if (sub.equals("backup")) {
+            return handleBackup(sender, args);
+        }
+
+        if (!(sender instanceof Player player)) {
+            sender.sendMessage(MessageUtil.error("Only players can use this command."));
+            return true;
+        }
 
         switch (sub) {
             case "preview" -> {
@@ -206,6 +238,11 @@ public class WarpCommand implements CommandExecutor, TabCompleter {
     // =========================================================================
 
     private void handleEdit(Player player, String[] args) {
+        if (plugin.isReadOnlyMode()) {
+            player.sendMessage(MessageUtil.error("PixelWarp is in read-only failsafe mode: " + plugin.getReadOnlyReason()));
+            return;
+        }
+
         // /warp edit <name> <location|category|public|private> [value]
         if (args.length < 3) {
             player.sendMessage(MessageUtil.info("Usage: /warp edit <name> <location|category|public|private>"));
@@ -222,7 +259,7 @@ public class WarpCommand implements CommandExecutor, TabCompleter {
         }
 
         if (!canManage(player, warp)) {
-            player.sendMessage(MessageUtil.error("Only the warp owner can edit this warp."));
+            player.sendMessage(MessageUtil.error("Only the warp owner, a warp admin, or a server owner can edit this warp."));
             return;
         }
 
@@ -266,6 +303,11 @@ public class WarpCommand implements CommandExecutor, TabCompleter {
     // =========================================================================
 
     private void handleRename(Player player, String[] args) {
+        if (plugin.isReadOnlyMode()) {
+            player.sendMessage(MessageUtil.error("PixelWarp is in read-only failsafe mode: " + plugin.getReadOnlyReason()));
+            return;
+        }
+
         // /warp rename <old> <new>
         if (args.length < 3) {
             player.sendMessage(MessageUtil.info("Usage: /warp rename <old> <new>"));
@@ -282,7 +324,7 @@ public class WarpCommand implements CommandExecutor, TabCompleter {
         }
 
         if (!canManage(player, warp)) {
-            player.sendMessage(MessageUtil.error("Only the warp owner can rename this warp."));
+            player.sendMessage(MessageUtil.error("Only the warp owner, a warp admin, or a server owner can rename this warp."));
             return;
         }
 
@@ -318,14 +360,25 @@ public class WarpCommand implements CommandExecutor, TabCompleter {
         String action = args[1].toLowerCase();
         String warpName = args[2];
 
+        if (plugin.isReadOnlyMode() && !action.equals("list")) {
+            player.sendMessage(MessageUtil.error("PixelWarp is in read-only failsafe mode: " + plugin.getReadOnlyReason()));
+            return;
+        }
+
         Warp warp = warpManager.getWarp(warpName);
         if (warp == null) {
             player.sendMessage(MessageUtil.error("Warp not found: " + warpName));
             return;
         }
 
+        WarpAccessManager accessManager = plugin.getAccessManager();
+        if (accessManager == null) {
+            player.sendMessage(MessageUtil.error("Access manager is not ready yet."));
+            return;
+        }
+
         if (!canManage(player, warp)) {
-            player.sendMessage(MessageUtil.error("Only the warp owner can manage access."));
+            player.sendMessage(MessageUtil.error("Only the warp owner, a warp admin, or a server owner can manage access."));
             return;
         }
 
@@ -412,6 +465,11 @@ public class WarpCommand implements CommandExecutor, TabCompleter {
     // =========================================================================
 
     private void handleImport(Player player, String[] args) {
+        if (plugin.isReadOnlyMode()) {
+            player.sendMessage(MessageUtil.error("PixelWarp is in read-only failsafe mode: " + plugin.getReadOnlyReason()));
+            return;
+        }
+
         if (!plugin.isServerOwner(player.getUniqueId())) {
             player.sendMessage(MessageUtil.error("Only server owners can import warps."));
             return;
@@ -471,7 +529,81 @@ public class WarpCommand implements CommandExecutor, TabCompleter {
         player.sendMessage(MessageUtil.info("/warp access <add|remove|list> <warp> - Manage access"));
         player.sendMessage(MessageUtil.info("/warp export - Export warps to JSON"));
         player.sendMessage(MessageUtil.info("/warp import [file] - Import warps from JSON"));
+        player.sendMessage(MessageUtil.info("/warp debug - Show plugin health report"));
+        player.sendMessage(MessageUtil.info("/warp reload [config|storage|all] - Safe runtime reload"));
+        player.sendMessage(MessageUtil.info("/warp backup confirm - Create immediate file storage backup"));
         player.sendMessage(Component.empty());
+    }
+
+    private boolean handleDebug(CommandSender sender) {
+        if (!isAdminSender(sender)) {
+            sender.sendMessage(MessageUtil.error("You do not have permission to run debug."));
+            return true;
+        }
+
+        for (String line : plugin.getHealthReportLines()) {
+            sender.sendMessage(Component.text(line, NamedTextColor.GRAY));
+        }
+        return true;
+    }
+
+    private boolean handleReload(CommandSender sender, String[] args) {
+        if (!isAdminSender(sender)) {
+            sender.sendMessage(MessageUtil.error("You do not have permission to reload PixelWarp."));
+            return true;
+        }
+
+        ReloadManager.ReloadScope scope = ReloadManager.ReloadScope.ALL;
+        if (args.length >= 2) {
+            scope = ReloadManager.ReloadScope.fromArg(args[1]);
+            if (scope == null) {
+                sender.sendMessage(MessageUtil.info("Usage: /warp reload [config|storage|all]"));
+                return true;
+            }
+        }
+
+        sender.sendMessage(MessageUtil.info("Starting reload: " + scope.name()));
+        plugin.reloadRuntime(scope).thenAccept(result ->
+                Bukkit.getScheduler().runTask(plugin, () -> {
+                    if (result.success()) {
+                        sender.sendMessage(MessageUtil.success(result.message()));
+                    } else {
+                        sender.sendMessage(MessageUtil.error(result.message()));
+                    }
+                })
+        );
+        return true;
+    }
+
+    private boolean handleBackup(CommandSender sender, String[] args) {
+        if (!isAdminSender(sender)) {
+            sender.sendMessage(MessageUtil.error("You do not have permission to run backup."));
+            return true;
+        }
+
+        if (args.length < 2 || !args[1].equalsIgnoreCase("confirm")) {
+            sender.sendMessage(MessageUtil.info("Usage: /warp backup confirm"));
+            return true;
+        }
+
+        plugin.createStorageBackup().thenAccept(success ->
+                Bukkit.getScheduler().runTask(plugin, () -> {
+                    if (success) {
+                        sender.sendMessage(MessageUtil.success("Storage backup created."));
+                    } else {
+                        sender.sendMessage(MessageUtil.error("Backup is only available in FILE mode or backup creation failed."));
+                    }
+                })
+        );
+        return true;
+    }
+
+    private boolean isAdminSender(CommandSender sender) {
+        if (!(sender instanceof Player player)) {
+            return true;
+        }
+        UUID uuid = player.getUniqueId();
+        return plugin.isAdmin(uuid) || plugin.isServerOwner(uuid);
     }
 
     // =========================================================================
@@ -480,10 +612,10 @@ public class WarpCommand implements CommandExecutor, TabCompleter {
 
     private boolean canManage(Player player, Warp warp) {
         return warp.getOwnerUuid().equals(player.getUniqueId())
+                || plugin.isAdmin(player.getUniqueId())
                 || plugin.isServerOwner(player.getUniqueId());
     }
 
-    @SuppressWarnings("deprecation")
     private OfflinePlayer resolvePlayer(String name) {
         return Bukkit.getOfflinePlayer(name);
     }
@@ -495,12 +627,33 @@ public class WarpCommand implements CommandExecutor, TabCompleter {
     @Override
     public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command,
                                       @NotNull String label, @NotNull String[] args) {
-        if (!(sender instanceof Player player)) return Collections.emptyList();
-        if (label.equalsIgnoreCase("warps")) return Collections.emptyList();
+        String base = label.toLowerCase(Locale.ROOT);
+        if (base.equals("warps")) return Collections.emptyList();
+
+        if (base.equals("pwarp")) {
+            if (args.length == 1) {
+                return filter(List.of("reload"), args[0]);
+            }
+            if (args.length == 2 && args[0].equalsIgnoreCase("reload")) {
+                return filter(List.of("config", "storage", "all"), args[1]);
+            }
+            return Collections.emptyList();
+        }
+
+        if (!(sender instanceof Player player)) {
+            if (args.length == 1) {
+                return filter(List.of("debug", "reload", "backup"), args[0]);
+            }
+            if (args.length == 2 && args[0].equalsIgnoreCase("reload")) {
+                return filter(List.of("config", "storage", "all"), args[1]);
+            }
+            return Collections.emptyList();
+        }
 
         if (args.length == 1) {
             List<String> completions = new ArrayList<>();
-            completions.addAll(List.of("preview", "stats", "top", "edit", "rename", "access", "export", "import"));
+            completions.addAll(List.of("preview", "stats", "top", "edit", "rename", "access", "export", "import",
+                    "debug", "reload", "backup"));
             completions.addAll(warpManager.getVisibleWarpNames(player));
             return filter(completions, args[0]);
         }
@@ -509,9 +662,11 @@ public class WarpCommand implements CommandExecutor, TabCompleter {
             String sub = args[0].toLowerCase();
             return switch (sub) {
                 case "preview", "stats" -> filter(warpManager.getVisibleWarpNames(player), args[1]);
-                case "edit", "rename" -> filter(getOwnedWarpNames(player), args[1]);
+                case "edit", "rename" -> filter(getManageableWarpNames(player), args[1]);
                 case "access" -> filter(List.of("add", "remove", "list"), args[1]);
                 case "import" -> filter(List.of(backupManager.listBackups()), args[1]);
+                case "reload" -> filter(List.of("config", "storage", "all"), args[1]);
+                case "backup" -> filter(List.of("confirm"), args[1]);
                 default -> Collections.emptyList();
             };
         }
@@ -520,7 +675,7 @@ public class WarpCommand implements CommandExecutor, TabCompleter {
             String sub = args[0].toLowerCase();
             return switch (sub) {
                 case "edit" -> filter(List.of("location", "category", "public", "private"), args[2]);
-                case "access" -> filter(getOwnedWarpNames(player), args[2]);
+                case "access" -> filter(getManageableWarpNames(player), args[2]);
                 default -> Collections.emptyList();
             };
         }
@@ -542,13 +697,17 @@ public class WarpCommand implements CommandExecutor, TabCompleter {
         return Collections.emptyList();
     }
 
-    private List<String> getOwnedWarpNames(Player player) {
-        if (plugin.isServerOwner(player.getUniqueId())) {
-            return warpManager.getVisibleWarpNames(player);
+    private List<String> getManageableWarpNames(Player player) {
+        if (plugin.isAdmin(player.getUniqueId()) || plugin.isServerOwner(player.getUniqueId())) {
+            return warpManager.getAllWarps().stream()
+                    .map(Warp::getName)
+                    .sorted(String.CASE_INSENSITIVE_ORDER)
+                    .collect(Collectors.toList());
         }
-        return warpManager.getVisibleWarps(player.getUniqueId()).stream()
+        return warpManager.getAllWarps().stream()
                 .filter(w -> w.getOwnerUuid().equals(player.getUniqueId()))
                 .map(Warp::getName)
+                .sorted(String.CASE_INSENSITIVE_ORDER)
                 .collect(Collectors.toList());
     }
 
